# Typeline

./: LICENSE  Makefile  README.md  Typeline.cabal  css-styler.cabal  stack.yaml  typeline.cabal
src/: Extensions.hs  Main.hs  ParseCSS.hs
tests/: tests.hs
