name:                css-styler
version:             0.1.0.0
homepage:            https://github.com/rstefanic/css-styler#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Stefanic
maintainer:          rstefanic72@gmail.com
copyright:           2017 Robert Stefanic
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable css-styler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
