name:                css-styler
version:             0.1.0.0
homepage:            https://github.com/rstefanic/css-styler#readme
license:             BSD3
license-file:        LICENSE
author:              Robert Stefanic
maintainer:          rstefanic72@gmail.com
copyright:           2017 Robert Stefanic
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     ParseCSS
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , parsec
  hs-source-dirs:      src
  default-language:    Haskell2010

executable css-styler
  other-modules:       ParseCSS
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

test-suite tests
  ghc-options:         -Wall -fno-warn-orphans
  type:                exitcode-stdio-1.0
  other-modules:       ParseCSS
  main-is:             tests.hs
  hs-source-dirs:      tests, src
  default-language:    Haskell2010
  build-depends:       base
                     , parsec
                     , css-styler
                     , hspec

